--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "immer": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tooltip": "^4.2.11",
     "use-immer": "^0.4.2",
     "web-vitals": "^0.2.4"
   },
