--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tooltip": "^4.2.11",
+    "react-transition-group": "^4.4.1",
     "use-immer": "^0.4.2",
     "web-vitals": "^0.2.4"
   },
