--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.1",
     "react-tooltip": "^4.2.11",
     "react-transition-group": "^4.4.1",
+    "socket.io-client": "^3.0.4",
     "use-immer": "^0.4.2",
     "web-vitals": "^0.2.4"
   },
